secondary button style

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,3 +1,8 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.ant-btn-secondary{
+    background: lightgreen!important;
+    border-color: lightgreen!important;
+}
